--- a/code/app/andriod/Laundry/res/layout/order_delivery_info.xml
+++ b/code/app/andriod/Laundry/res/layout/order_delivery_info.xml
@@ -18,7 +18,7 @@
             android:orientation="vertical" >
 
             <EditText
-                android:id="@+id/editText1"
+                android:id="@+id/misp_confirm_password_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
