--- a/code/app/andriod/Laundry/res/values/dimens.xml
+++ b/code/app/andriod/Laundry/res/values/dimens.xml
@@ -6,14 +6,19 @@
     
     
     <dimen name="top_head_height">50dp</dimen>
+    <dimen name="top_head_title_font_size">25dp</dimen>
+    <dimen name="top_head_btn_size">20dp</dimen>
+    
     <dimen name="tabbar_height">50dp</dimen>
     <dimen name="tabbar_image_size">30dp</dimen>
     
          <!-- definied by Aether -->
    
-     <dimen name="head_font_size">30dp</dimen>
      <dimen name="head_font_size_sm">22dp</dimen>
-     <dimen name="title_font_size">25dp</dimen>
-     <dimen name="content_font_size">18dp</dimen>
+      <dimen name="content_font_size">18dp</dimen>
      <dimen name="content_font_size_sm">15dp</dimen>
+     <dimen name="list_item_margin">10dp</dimen>
+      <dimen name="list_item_left">10dp</dimen>
+     <dimen name="list_item_right">10dp</dimen>
+     <dimen name="title_margin">10dp</dimen>
 </resources>
