--- a/code/app/andriod/Laundry/res/layout/home_goods_item.xml
+++ b/code/app/andriod/Laundry/res/layout/home_goods_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:background="@color/white"
     android:orientation="vertical">
 
@@ -10,22 +10,21 @@
         android:layout_height="match_parent"
         android:orientation="horizontal" >
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_gravity="center_horizontal"
-            android:layout_weight="3"
-            android:orientation="vertical" >
+            android:layout_gravity="center"
+            android:layout_weight="3" >
 
             <ImageView
                 android:id="@+id/product_list_item_img"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_gravity="right"
+                android:layout_width="69dp"
+                android:layout_height="76dp"
+                android:layout_centerInParent="true"
                 android:scaleType="fitXY"
                 android:src="@drawable/load_image_failed" />
 
-        </LinearLayout>
+        </RelativeLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -36,7 +35,7 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_gravity="center"
                 android:layout_weight="1"
                 android:orientation="vertical" >
@@ -47,20 +46,20 @@
                     android:layout_height="15dp"
                     android:layout_gravity="right"
                     android:scaleType="fitXY"
-                    android:src="@drawable/checkbox_off" />
+                    />
 
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_gravity="center"
-                android:layout_weight="1"
+                android:layout_weight="0.6"
                 android:orientation="vertical" >
 
                 <TextView
                     android:id="@+id/product_list_item_name"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textColor="@color/themecolor"
                     android:textSize="@dimen/content_font_size_sm" />
@@ -69,24 +68,36 @@
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="right" >
+                android:layout_height="match_parent"
+                android:layout_weight="0.8"
+                android:gravity="right|center_vertical"
+                android:paddingRight="5dp" >
 
-                <TextView
-                    android:id="@+id/text1"
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/misp_rmb_unit"
-                    android:textColor="@color/themecolor"
-                    android:textSize="@dimen/content_font_size_sm" />
+                    android:gravity="right"
+                    android:orientation="horizontal" >
+                    
+                    <TextView
+                        android:id="@+id/text1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="right"
+                        android:layout_weight="1"
+                        android:text="@string/misp_rmb_unit"
+                        android:textColor="@color/themecolor"
+                        android:textSize="@dimen/content_font_size_sm" />
 
-                <TextView
-                    android:id="@+id/product_list_item_curPrice"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/themecolor"
-                    android:textSize="@dimen/content_font_size_sm" />
+                    <TextView
+                        android:id="@+id/product_list_item_curPrice"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:textColor="@color/themecolor"
+                        android:textSize="@dimen/content_font_size_sm" />
+                </LinearLayout>
+
             </RelativeLayout>
 
         </LinearLayout>
