--- a/code/app/andriod/Laundry/res/layout/home_goods_sel.xml
+++ b/code/app/andriod/Laundry/res/layout/home_goods_sel.xml
@@ -34,30 +34,34 @@
             android:textColor="@color/white"
             android:textSize="@dimen/head_font_size_sm" />
     </RelativeLayout>
-
+   
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical" >
 
-        <LinearLayout
+        <ScrollView
+            android:id="@+id/scrollView1"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="0.2"
-            android:background="@color/grid_back_color" >
+            android:layout_height="wrap_content"
+            android:layout_weight="0.2" >
 
-               <cn.fuego.misp.ui.base.MispGridView
-                   android:id="@+id/product_gridview"
-                   android:layout_width="match_parent"
-                   android:layout_height="81dp"
-                   android:gravity="center"
-                   android:horizontalSpacing="7dp"
-                   android:numColumns="2"
-                   android:verticalSpacing="5dp" >
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical" >
 
-               </cn.fuego.misp.ui.base.MispGridView>
-                
-        </LinearLayout>
+                <cn.fuego.misp.ui.base.MispGridView
+                    android:id="@+id/product_gridview"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:horizontalSpacing="7dp"
+                    android:numColumns="2"
+                    android:verticalSpacing="5dp" >
+                </cn.fuego.misp.ui.base.MispGridView>
+            </LinearLayout>
+        </ScrollView>
 
         <View
             android:id="@+id/view1"
@@ -67,9 +71,8 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="0.9"
-            android:alpha="0.8"
+            android:layout_height="90dp"
+             android:alpha="0.8"
             android:background="@color/white"
  
             android:paddingLeft="40dp"
@@ -84,8 +87,6 @@
                 android:layout_centerVertical="true"
     
                 android:background="@drawable/common_btn"
-                android:focusable="false"
-                android:focusableInTouchMode="false"
                 android:text="洗衣篮"
                 android:textColor="@color/white"
                 android:textSize="20sp" />
