--- a/code/app/andriod/Laundry/res/layout/misp_image_display.xml
+++ b/code/app/andriod/Laundry/res/layout/misp_image_display.xml
@@ -5,28 +5,33 @@
     android:background="@color/backcolor"
     android:orientation="vertical" >
 
-    <include
+ <include
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         layout="@layout/misp_tilte_with_back_layout" />
  
  
+
+ 
+
+    <ScrollView
+        android:id="@+id/scrollView1"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:fillViewport="true" >
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical" >
 
-            <ListView
-                android:id="@+id/misp_info_list"
-                android:layout_width="match_parent"
+            <ImageView
+                android:id="@+id/misp_common_image"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="50dp" >
-
-            </ListView>
-
-           
+                />
+            
         </LinearLayout>
- 
- 
+    </ScrollView>
 
 </LinearLayout>
