--- a/code/app/andriod/Laundry/res/layout/order_info.xml
+++ b/code/app/andriod/Laundry/res/layout/order_info.xml
@@ -4,43 +4,11 @@
     android:layout_height="match_parent"
     android:background="@color/backcolor"
     android:orientation="vertical" >
-
-    <LinearLayout
+ 
+       <include
         android:layout_width="match_parent"
-        android:layout_height="@dimen/top_head_height"
-        android:background="@color/themecolor"
-        android:orientation="vertical" >
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" >
-
-            <TextView
-                android:id="@+id/textView1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:layout_centerVertical="true"
-                android:text="订单"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textColor="@color/white"
-                android:textSize="@dimen/head_font_size_sm" />
-
-            <Button
-                android:id="@+id/order_info_back"
-                android:layout_width="wrap_content"
-                android:layout_height="fill_parent"
-                android:layout_marginLeft="10dp"
-                android:background="@null"
-                android:drawableLeft="@drawable/detail_back"
-                android:drawablePadding="5dp"
-                android:focusableInTouchMode="true"
-                android:text="返回"
-                android:textColor="@color/white"
-                android:textSize="20sp" />
-        </RelativeLayout>
-    </LinearLayout>
-
+        android:layout_height="wrap_content"
+        layout="@layout/misp_tilte_with_save_layout" />
     <ScrollView
         android:id="@+id/scrollView1"
         android:layout_width="fill_parent"
