--- a/code/app/andriod/Laundry/res/layout/chart_list_item.xml
+++ b/code/app/andriod/Laundry/res/layout/chart_list_item.xml
@@ -4,8 +4,8 @@
     android:layout_height="wrap_content"
     android:background="@color/white"
     android:orientation="horizontal"
-    android:paddingLeft="30dp"
-    android:paddingRight="30dp" >
+    android:paddingLeft="10dp"
+    android:paddingRight="10dp" >
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -27,13 +27,13 @@
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_gravity="center_vertical"
-        android:layout_weight="0.45" >
+        android:layout_weight="0.45"
+        android:gravity="center_vertical|center_horizontal" >
 
         <TextView
             android:id="@+id/chart_list_item_price"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
             android:layout_weight="0.5"
             android:text="价格"
             android:textColor="@color/black"
@@ -73,6 +73,7 @@
             android:id="@+id/char_list_item_btn_delete"
             android:layout_width="40dp"
             android:layout_height="40dp"
+            android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:layout_weight="0.5"
             android:background="@drawable/btn_del_img" />
