--- a/code/app/andriod/Laundry/res/layout/home_fragment.xml
+++ b/code/app/andriod/Laundry/res/layout/home_fragment.xml
@@ -64,7 +64,7 @@
 			        android:layout_height="200dp"  
 			        android:layout_gravity="center"
 			      
-			        android:background="@drawable/loading_image"
+			        android:background="@drawable/loading_large_image"
 			     
                       android:persistentDrawingCache="animation" >  
 			    </android.support.v4.view.ViewPager>  
