--- a/code/app/andriod/Laundry/res/layout/misp_list_item_btntype.xml
+++ b/code/app/andriod/Laundry/res/layout/misp_list_item_btntype.xml
@@ -2,11 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/item_backgroud"
     android:orientation="vertical" >
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="40dp"
+        android:layout_gravity="center_horizontal"
         android:background="@color/white" >
 
         <TextView
@@ -15,17 +17,30 @@
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="15dp"
+            android:layout_marginLeft="10dp"
     
             android:textColor="@color/black" />
 
-        <ImageView
-            android:id="@+id/imageView1"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:src="@drawable/forward_sm" />
+            android:gravity="right|center" >
+
+            <TextView
+                android:id="@+id/item_btntype_value"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:text="点击修改" />
+
+            <ImageView
+                android:id="@+id/imageView1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/forward_sm" />
+
+        </LinearLayout>
 
     </RelativeLayout>
 
