--- a/code/app/andriod/Laundry/res/values/dimens.xml
+++ b/code/app/andriod/Laundry/res/values/dimens.xml
@@ -9,6 +9,8 @@
     <dimen name="top_head_title_font_size">25dp</dimen>
     <dimen name="top_head_btn_size">20dp</dimen>
     
+    <dimen name="item_height_size">50dp</dimen>
+    
     <dimen name="tabbar_height">50dp</dimen>
     <dimen name="tabbar_image_size">30dp</dimen>
     
