--- a/code/app/andriod/Laundry/res/layout/misp_info_display.xml
+++ b/code/app/andriod/Laundry/res/layout/misp_info_display.xml
@@ -20,7 +20,8 @@
                 android:id="@+id/misp_info_list"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="50dp" >
+                android:layout_marginTop="10dp" 
+                android:layout_marginBottom="50dp">
 
             </ListView>
 
