--- a/code/app/andriod/Laundry/res/layout/misp_tilte_with_save_layout.xml
+++ b/code/app/andriod/Laundry/res/layout/misp_tilte_with_save_layout.xml
@@ -42,12 +42,11 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:padding="@dimen/list_item_margin"
-                        android:text="啊啊啊"
+                        android:text=""
                         android:textColor="@color/theme_text_color"
                         android:textSize="@dimen/top_head_title_font_size" />
 
-         </LinearLayout>     
+         </LinearLayout>    
 
        <LinearLayout
            android:layout_width="wrap_content"
